[package]
name = "airvpn"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rsa = "0.9"
num-bigint-dig = "0.8"
aes = "0.8"
cipher = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
roxmltree = "0.20"
form_urlencoded = "1"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }